# libqsearch-clean

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  QSearchMakeTree.cpp  QSearchManager.cpp  QSearchTree.cpp  QSearchTree.hpp  README.md  RandTools.hpp  SimpleMatrix.cpp  deploy.sh  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json  runtests  web-build
.github/workflows/: test-and-build.yml  unit-tests.yml
complearn-genbank/: Dockerfile  app.js  app.ts  package-lock.json  package.json  redis.conf  tsconfig.json
complearn-genbank/__tests__/: clURL.test.ts  user.test.js  (+1 more)
ncd-calculator/: .eslintrc.js  .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js  vite.config.ts  vitest.setup.js
qsearch_html/: index.html  qsearch.js
qsearch_single_thread/: qsearch.js
qsearch_worker_DOM/: index.html  qsearch.js  qsearchWorker.js
qsearch_worker_react/: package-lock.json  package.json  vite.config.js
samples/: Mammals.txt  SmallTest.txt
scripts/: build_and_launch_docker_system.sh  deploy.sh  local_compose_build_up.sh  nam_stage_build.sh  shawn_stage_build.sh  teardown.sh
src/: QSearchConnectedNode.cpp  QSearchConnectedNode.hpp  QSearchFullTree.cpp  QSearchFullTree.hpp  QSearchMakeTree.cpp  QSearchMakeTree.hpp  QSearchManager.cpp  QSearchManager.hpp  QSearchNeighborList.cpp  QSearchNeighborList.hpp  QSearchTree.cpp  QSearchTree.hpp  QSearchWeb.cpp  RandTools.hpp  SimpleMatrix.cpp  SimpleMatrix.hpp  StringTools.cpp  StringTools.hpp  maketree.cpp  test-qsearch.cpp
(+267 files in other folders)
